// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render CC answer 1`] = `
.c0 {
  margin-top: 2rem;
  margin-bottom: 1.25rem;
  font-size: 1.625rem;
}

.c1 {
  color: #005994;
  font-weight: 700;
  font-size: 1.375rem;
  white-space: nowrap;
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
    <p>
      <strong
        class="c1"
      >
        0 jours
      </strong>
    </p>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale: 
      <strong>
        Pas de préavis
      </strong>
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
      : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
      : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
      : 
      <strong>
        moins de 6 mois
      </strong>
    </li>
  </ul>
</div>
`;

exports[`<StepResult /> should render with no cc 1`] = `
.c0 {
  margin-top: 2rem;
  margin-bottom: 1.25rem;
  font-size: 1.625rem;
}

.c1 {
  color: #005994;
  font-weight: 700;
  font-size: 1.375rem;
  white-space: nowrap;
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
    <p>
      <strong
        class="c1"
      >
        2 mois
      </strong>
    </p>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale: 
      <strong>
        Pas de préavis
      </strong>
    </li>
    <li>
      Durée conventionnelle: 
      <strong>
        1 mois
      </strong>
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
      : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
      : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
      : 
      <strong>
        moins de 6 mois
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      Catégorie socio-professionnelle
      : 
      <strong>
        Ouvriers
      </strong>
    </li>
    <li>
      Groupe
      : 
      <strong>
        I
      </strong>
    </li>
    <li>
      Coefficient
      : 
      <strong>
        inférieur à 160
      </strong>
    </li>
    <li>
      Ancienneté selon la convention collective
      : 
      <strong>
        moins de 2 ans
      </strong>
    </li>
    <li>
      Convention collective
      : 
      <strong>
        undefined
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichIDCCArticle.do?idArticle=KALIARTI000005846394&cidTexte=KALITEXT000005677782&dateTexte=20190829"
      title="Consultez l’avenant n°1 article 27"
    >
      Avenant n°1 article 27
    </a>
  </p>
</div>
`;
